--- a/src/project.json
+++ b/src/project.json
@@ -50,6 +50,5 @@
   ],
   "isTemplate": false,
   "templateProjectData": {},
-  "publishData": {},
-  "targetFramework": "Legacy"
+  "publishData": {}
 }
